提交资料大全

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"Hello World" 
+<!DOCTYPE html>
+<!-- saved from url=(0049)http://service.91era.com/serviceinfo/service.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+		<meta http-equiv="Pragma" content="no-cache">
+		<meta http-equiv="Expires" content="0">
+		<title>原厂机资料大全</title>
+	</head>
+	<body>
+		<ul>
+			<li>解决伍德沃德链接报错V1.0：<a href="https://pan.baidu.com/s/1SjwBUIvgSaobGGSqIv2tZg">https://pan.baidu.com/s/1SjwBUIvgSaobGGSqIv2tZg</a>提取码：1234</li>
+			<li>伍德沃德天然气安装包 - V6.3.340.1：<a href="https://pan.baidu.com/s/1IFRsYVuAwZZOpxKrS6rznQ">https://pan.baidu.com/s/1IFRsYVuAwZZOpxKrS6rznQ</a>提取码：1234</li>
+			<li>原厂机驱动C60和C90通用：<a href="https://pan.baidu.com/s/1dPxjmMTQtnPJ9kJPqOVkhA">https://pan.baidu.com/s/1dPxjmMTQtnPJ9kJPqOVkhA</a>提取码：1234</li>
+			<li>康明斯最新离线刷写文件：<a href="https://pan.baidu.com/s/1PvjSCtnaDYntloSZ53THAQ">https://pan.baidu.com/s/1PvjSCtnaDYntloSZ53THAQ</a>提取码：1234</li>
+			<li>测量引脚电压V1.0：<a href="https://pan.baidu.com/s/1jVHsugzsa-RTQoCldAwwow">https://pan.baidu.com/s/1jVHsugzsa-RTQoCldAwwow</a>提取码：1234</li>
+		</ul>
+	
+
+</body></html>
